--- a/app/Styles/global.css
+++ b/app/Styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 header{
     display: grid;
     float: left;
@@ -6,8 +8,7 @@ header{
 
 
 body{
-    width: 100vw;
-    height: auto;
+    font-family: 'Press Start 2P', cursive;
     font-size: 20px;
     display: flex;
     flex-direction: column;
@@ -66,6 +67,7 @@ main{
 
 @media (max-width: 768px) {
     body {
+        margin: 10px;
         flex-direction: column;
         font-size: 5px;
     }
