--- a/app/Styles/index.css
+++ b/app/Styles/index.css
@@ -14,6 +14,7 @@ body{
     margin: 20px 20px;
 }
 
+
 .circulo > img{
 
     width: 100%;
@@ -28,9 +29,33 @@ body{
     width: 300px;
     height: 50px;
 }
+
+@media (max-width: 900px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .container h1{
+        font-size: 20px;
+    }
+    .buttoms{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media (max-width: 400px) {
+    .container h1{
+        font-size: 4vw;
+        margin: 50px;
+    }
+}
 .container{
     margin: 70px 60px;
-    width: 100%;
+    width: 80vw;
     max-width: 1200px;
     display: flex;
     flex-direction: column;
